# rofi-tmuxp

./: .travis.yml  LICENSE  README.rst  pyproject.toml  rofi_tmuxp.py  tox.ini  travis.yml
.github/workflows/: build.yaml  build_publish.yaml  publish_release.yaml  test.yaml  test.yml
rofi_tmuxp/: __init__.py  cli.py  rofi_client.py  sessions.py  tmuxp_client.py
src/: rofi_tmuxp.py
test/: __init__.py  test_rofi_tmuxp.py
