[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rofi-tmuxp"
authors = [
    {name = "Heinrich Kruger", email = "heindsight@kruger.dev"}
]
readme = "README.rst"
version = "0.5.0"
dynamic = ["description"]
keywords = ["rofi", "tmux", "tmuxp"]
licence = {file = "LICENSE"}
urls = {Homepage = "https://github.com/heindsight/rofi-tmuxp"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Topic :: Desktop Environment :: Window Managers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = "~=3.8"
dependencies = [
    "pyyaml",
    "tmuxp ~= 1.1",
]

[project.optional-dependencies]
lint = [
    "black",
    "flake8",
    "flake8-pyproject",
    "docformatter",
    "flake8-pytest-style",
    "isort",
    "pytest",
    "mypy",
    "rstcheck",
    "types-pyyaml",
]
dev = [
    "pdbpp",
]
test = [
    "coverage-conditional-plugin",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-randomly",
]

[project.scripts]
rofi-tmuxp = "rofi_tmuxp:main"

[tool.flit.module]
name = "rofi_tmuxp"

[tool.flit.sdist]
include = ["test/", "tox.ini"]
exclude = [".github/", ".gitignore"]

[tool.isort]
profile="black"
lines_after_imports = 2

[tool.docformatter]
black = true

[tool.flake8]
max-line-length = 88
pytest-fixture-no-parentheses = true

[tool.pytest.ini_options]
addopts = [
    "--cov=rofi_tmuxp",
    "--cov=test",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
    "--cov-branch",
    "--no-cov-on-fail",
]

[tool.coverage]
plugins = ["coverage_conditional_plugin"]

[tool.coverage.coverage_conditional_plugin.rules]
no_cover_tmuxp_gte_1_11 = "package_version('tmuxp') >= (1, 11, 0)"
no_cover_tmuxp_gte_1_18 = "package_version('tmuxp') >= (1, 18, 0)"
